# readingtime

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  start_readingtime.vbs
readingtime/: __init__.py  config.py  database.py  main.py  notifier.py
readingtime/agent/: __init__.py  capabilities.py  llm.py  profiler.py  prompts.py  recommender.py  summarizer.py
readingtime/monitor/: __init__.py  watcher.py
readingtime/scheduler/: __init__.py  tasks.py
readingtime/shelf/: __init__.py  activity_log.py  converter.py  epub_utils.py  manager.py  paths.py  sourcing.py
readingtime/sources/: __init__.py  base.py  kgbook.py
tests/: __init__.py  test_converter.py  test_database.py  test_integration.py  test_profiler.py  test_shelf_manager.py  test_sources.py  test_watcher.py
